# TinyMinecraftLauncher

./: Cargo.toml  build.rs
src/: about.rs  main.rs  news.rs
src/ui/: about.rs  accounts.rs  instances.rs  mod.rs  news.rs  settings.rs
ui/: appwindow.slint
