[package]
name = "tiny_minecraft_launcher"
version = "0.0.1"
edition = "2021"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]
repository = "https://github.com/mq1/TinyMinecraftLauncher"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
open = "2"

[dependencies.mc]
package = "minecraft-launcher-lib"
git = "https://github.com/mq1/minecraft-launcher-lib-rs.git"
rev = "7a442f77e55a4e7a1485301d5f469570cbca3971"

[dependencies.druid]
git = "https://github.com/linebender/druid.git"
rev = "aa4b36658be4164f2a30ffebeef434638dbfc4f8"
features = ["im"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
