[package]
name = "tiny_minecraft_launcher"
version = "0.0.1"
edition = "2021"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]
repository = "https://github.com/mq1/TinyMinecraftLauncher"
license = "GPL-3.0-or-later"

[dependencies]
iced = { version = "0.4", default-features = false, features = ["glow"] }
attohttpc = "0.19"
const_format = "0.2"
anyhow = "1"
open = "2"

[dependencies.mc]
package = "minecraft-launcher-lib"
git = "https://github.com/mq1/minecraft-launcher-lib-rs.git"
rev = "d6541d9fa951c6a5a7bc541c11432696d86a4843"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
